# remote-apis-sdks

go/api/bazelbep/build_event_stream/: BUILD.bazel  build_event_stream.pb.go  build_event_stream.proto
go/api/bazelbep/command_line/: BUILD.bazel  command_line.pb.go  command_line.proto
go/api/bazelbep/failure_details/: BUILD.bazel  failure_details.pb.go  failure_details.proto
go/api/bazelbep/options/: BUILD.bazel  options.pb.go  options.proto
go/api/buildeventstream/: BUILD.bazel  buildeventstream.pb.go  buildeventstream.proto
go/cmd/rexec/: BUILD.bazel  main.go
go/pkg/client/: BUILD.bazel  bes.go  client.go
go/pkg/command/: command.go
go/pkg/flags/: flags.go
