load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/bazelbep/command_line:command_line_proto",
        "//go/api/bazelbep/failure_details:failure_details_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/bazelbep/build_event_stream",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/bazelbep/command_line",
        "//go/api/bazelbep/failure_details",
    ],
)

go_library(
    name = "build_event_stream",
    embed = [":build_event_stream_go_proto"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/bazelbep/build_event_stream",
    visibility = ["//visibility:public"],
)
