load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "options_proto",
    srcs = ["options.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/bazelbep/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "options",
    embed = [":options_go_proto"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/bazelbep/options",
    visibility = ["//visibility:public"],
)
